--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,38 @@
     <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
     <string name="settings_order_by_most_recent_label">Most Recent</string>
     <string name="settings_order_by_most_recent_value" translatable="false">time</string>
+
+    <!-- Strings For Country Preference [CHAR LIMIT=30] -->
+    <string name="settings_country_label">Country</string>
+    <string name="settings_country_key" translatable="false">country</string>
+    <string name="settings_country_default" translatable="false">@string/settings_country_none_value</string>
+
+
+    <!-- Label for Egypt [CHAR LIMIT=20] -->
+    <string name="settings_country_egypt_label">Egypt</string>
+    <string name="settings_country_egypt_value" translatable="false">Egypt</string>
+
+    <!-- Label for Japan [CHAR LIMIT=20] -->
+    <string name="settings_country_japan_label">Japan</string>
+    <string name="settings_country_japan_value" translatable="false">Japan</string>
+
+    <!-- Label for Germany [CHAR LIMIT=20] -->
+    <string name="settings_country_germany_label">Germany</string>
+    <string name="settings_country_germany_value" translatable="false">Germany</string>
+
+    <!-- Label for France [CHAR LIMIT=20] -->
+    <string name="settings_country_france_label">France</string>
+    <string name="settings_country_france_value" translatable="false">France</string>
+
+    <!-- Label for USA [CHAR LIMIT=20] -->
+    <string name="settings_country_usa_label">USA</string>
+    <string name="settings_country_usa_value" translatable="false">USA</string>
+
+    <!-- Label for CA [CHAR LIMIT=20] -->
+    <string name="settings_country_ca_label">CA</string>
+    <string name="settings_country_ca_value" translatable="false">CA</string>
+
+    <!-- Label for none [CHAR LIMIT=20] -->
+    <string name="settings_country_none_label">none</string>
+    <string name="settings_country_none_value" translatable="false">none</string>
 </resources>
